--- a/conda/recipe/pcgrr/meta.yaml
+++ b/conda/recipe/pcgrr/meta.yaml
@@ -35,6 +35,7 @@ requirements:
     - bioconductor-quantiseqr
     - r-quarto
     - quarto
+    - r-randomforest
     - r-readr
     - r-reshape2
     - r-rlang
@@ -66,6 +67,7 @@ requirements:
     - bioconductor-quantiseqr
     - r-quarto
     - quarto
+    - r-randomforest
     - r-readr
     - r-reshape2
     - r-rlang
