export conda quarto env vars

--- a/pcgrr/NAMESPACE
+++ b/pcgrr/NAMESPACE
@@ -25,6 +25,7 @@ export(deduplicate_eitems)
 export(detect_vcf_sample_name)
 export(df_string_replace)
 export(expand_biomarker_items)
+export(export_quarto_evars)
 export(filter_eitems_by_site)
 export(filter_read_support)
 export(generate_annotation_link)
