--- a/pcgrr/DESCRIPTION
+++ b/pcgrr/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: pcgrr
 Type: Package
 Title: Personal Cancer Genome ReporteR
-Version: 1.4.1.9005
+Version: 1.4.1.9006
 Date: 2024-04-27
 Authors@R:
     c(person(given = "Sigve",
@@ -53,6 +53,7 @@ Imports:
     S4Vectors,
     scales,
     stringr,
+    tibble,
     tidyr,
     yaml
 Depends:
