install bslib, shiny, crosstalk deps

--- a/pcgrr/DESCRIPTION
+++ b/pcgrr/DESCRIPTION
@@ -30,8 +30,10 @@ Imports:
     assertable,
     assertthat,
     Biostrings,
+    bslib,
     caret,
     CNAqc,
+    crosstalk,
     dplyr,
     DT,
     formattable,
@@ -52,6 +54,7 @@ Imports:
     rrapply,
     S4Vectors,
     scales,
+    shiny,
     stringr,
     tibble,
     tidyr,
