--- a/conda/recipe/pcgrr/meta.yaml
+++ b/conda/recipe/pcgrr/meta.yaml
@@ -20,7 +20,9 @@ requirements:
     - r-assertable
     - r-assertthat
     - bioconductor-biostrings
+    - r-bslib
     - r-caret
+    - r-crosstalk
     - r-dplyr
     - r-dt
     - r-formattable
@@ -42,6 +44,7 @@ requirements:
     - r-rrapply
     - bioconductor-s4vectors
     - r-scales
+    - r-shiny
     - r-stringr
     - r-stringi
     - r-tidyr
@@ -52,7 +55,9 @@ requirements:
     - r-assertable
     - r-assertthat
     - bioconductor-biostrings
+    - r-bslib
     - r-caret
+    - r-crosstalk
     - r-dplyr
     - r-dt
     - r-formattable
@@ -74,6 +79,7 @@ requirements:
     - r-rrapply
     - bioconductor-s4vectors
     - r-scales
+    - r-shiny
     - r-stringr
     - r-stringi
     - r-tidyr
