run pkgdown only on master

--- a/.github/workflows/build_conda_recipes.yaml
+++ b/.github/workflows/build_conda_recipes.yaml
@@ -5,6 +5,7 @@ on:
     branches:
       - master
       - bundle_update_2023
+      - locale
 env:
   atoken: ${{ secrets.ANACONDA_UPLOAD_TOKEN }}
   recipe_path: conda/recipe
@@ -85,6 +86,7 @@ jobs:
           git commit -m "${MSG}"
           git push
       - name: 🌐 Website publish
+        if: github.ref_name == 'master'
         run: |
           micromamba env create -n pkgdownenv -f ${env_yml_path}/pkgdown.yml
           micromamba activate pkgdownenv
