correct actionability reference and doc fixes

--- a/pcgrr/NAMESPACE
+++ b/pcgrr/NAMESPACE
@@ -11,7 +11,7 @@ export(append_gwas_citation_phenotype)
 export(append_targeted_drug_annotations)
 export(append_tcga_var_link)
 export(append_tfbs_annotation)
-export(assign_acmg_tiers)
+export(assign_amp_asco_tiers)
 export(assign_germline_popfreq_status)
 export(assign_mutation_type)
 export(assign_somatic_classification)
