Add google analytics MS ID

--- a/pcgrr/pkgdown/_pkgdown.yml
+++ b/pcgrr/pkgdown/_pkgdown.yml
@@ -13,6 +13,16 @@ template:
     navbar-light-brand-color: "white"
     navbar-light-brand-hover-color: "white"
     navbar-link-color: "white"
+    includes:
+      in_header: |
+         <script async src="https://www.googletagmanager.com/gtag/js?id=G-7HRLE8GQRE"></script>
+         <script>
+           window.dataLayer = window.dataLayer || [];
+           function gtag(){dataLayer.push(arguments);}
+           gtag('js', new Date());
+
+           gtag('config', 'G-7HRLE8GQRE');
+         </script>
 authors:
   Sigve Nakken:
     href: "https://github.com/sigven"
