properly filter MAF output in tumor-only mode

--- a/pcgrr/NAMESPACE
+++ b/pcgrr/NAMESPACE
@@ -28,6 +28,7 @@ export(exclude_non_chrom_variants)
 export(expand_biomarker_items)
 export(export_quarto_evars)
 export(filter_eitems_by_site)
+export(filter_maf_file)
 export(filter_read_support)
 export(generate_annotation_link)
 export(generate_report)
