updated funcs in NAMESPACE

--- a/pcgrr/NAMESPACE
+++ b/pcgrr/NAMESPACE
@@ -46,6 +46,7 @@ export(get_excel_sheets)
 export(get_genome_obj)
 export(get_prevalent_site_signatures)
 export(get_valid_chromosomes)
+export(get_variant_statistics)
 export(het_af_germline_status)
 export(hom_af_status)
 export(init_cna_vstats)
@@ -63,6 +64,7 @@ export(init_var_content)
 export(kataegis_detect)
 export(kataegis_input)
 export(load_all_eitems)
+export(load_cpsr_classified_variants)
 export(load_dna_variants)
 export(load_eitems)
 export(load_expression_csq)
@@ -82,6 +84,7 @@ export(mkdir)
 export(msi_indel_fraction_plot)
 export(msi_indel_load_plot)
 export(order_variants)
+export(plot_cna_segments)
 export(plot_tmb_primary_site_tcga)
 export(plot_value_boxes)
 export(pon_status)
