move qmd code to pcgrr funcs

--- a/pcgrr/NAMESPACE
+++ b/pcgrr/NAMESPACE
@@ -44,6 +44,7 @@ export(get_clin_assocs_cna)
 export(get_dt_tables)
 export(get_excel_sheets)
 export(get_genome_obj)
+export(get_oncogenic_cna_events)
 export(get_prevalent_site_signatures)
 export(get_valid_chromosomes)
 export(get_variant_statistics)
@@ -85,6 +86,7 @@ export(msi_indel_fraction_plot)
 export(msi_indel_load_plot)
 export(order_variants)
 export(plot_cna_segments)
+export(plot_signature_contributions)
 export(plot_tmb_primary_site_tcga)
 export(plot_value_boxes)
 export(pon_status)
