update oncogenicity classification

--- a/pcgrr/NAMESPACE
+++ b/pcgrr/NAMESPACE
@@ -8,6 +8,7 @@ export(append_dbmts_var_link)
 export(append_dbnsfp_var_link)
 export(append_drug_var_link)
 export(append_gwas_citation_phenotype)
+export(append_oncogenicity_docs)
 export(append_targeted_drug_annotations)
 export(append_tcga_var_link)
 export(append_tfbs_annotation)
