MaxEntScan: use conda shared data

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -41,11 +41,8 @@ Changelog = "https://sigven.github.io/pcgr/articles/CHANGELOG.html"
 pcgr = "pcgr.main:cli"
 cpsr = "pcgr.cpsr:main"
 
-[tool.setuptools.packages.find]
-where = ["data"]
-
-[tool.setuptools.package-data]
-"MaxEntScan" = ["**"]
+[tool.setuptools.packages]
+find = {}
 
 [tool.setuptools]
 script-files = [
