--- a/pcgrr/NAMESPACE
+++ b/pcgrr/NAMESPACE
@@ -9,6 +9,7 @@ export(append_dbnsfp_var_link)
 export(append_drug_var_link)
 export(append_gwas_citation_phenotype)
 export(append_oncogenicity_docs)
+export(append_protein_domains)
 export(append_targeted_drug_annotations)
 export(append_tcga_var_link)
 export(append_tfbs_annotation)
@@ -49,6 +50,7 @@ export(get_oncogenic_cna_events)
 export(get_prevalent_site_signatures)
 export(get_valid_chromosomes)
 export(get_variant_statistics)
+export(grpmax_faf_nc_gnomad)
 export(het_af_germline_status)
 export(hom_af_status)
 export(init_cna_vstats)
@@ -81,7 +83,6 @@ export(log4r_fatal)
 export(log4r_info)
 export(log4r_warn)
 export(log_var_eitem_stats)
-export(max_af_gnomad)
 export(mkdir)
 export(msi_indel_fraction_plot)
 export(msi_indel_load_plot)
@@ -91,6 +92,7 @@ export(plot_signature_contributions)
 export(plot_tmb_primary_site_tcga)
 export(plot_value_boxes)
 export(pon_status)
+export(popmax_af_gnomad)
 export(predict_msi_status)
 export(qc_var_eitems)
 export(remove_cols_from_df)
