--- a/pcgrr/NAMESPACE
+++ b/pcgrr/NAMESPACE
@@ -47,9 +47,11 @@ export(get_excel_sheets)
 export(get_genome_obj)
 export(get_oncogenic_cna_events)
 export(get_prevalent_site_signatures)
+export(get_tumor_only_filtering_criteria)
 export(get_valid_chromosomes)
 export(get_variant_statistics)
 export(het_af_germline_status)
+export(hex_to_rgba)
 export(hom_af_status)
 export(init_cna_vstats)
 export(init_expression_content)
@@ -87,9 +89,12 @@ export(msi_indel_fraction_plot)
 export(msi_indel_load_plot)
 export(order_variants)
 export(plot_cna_segments)
+export(plot_filtering_stats_exonic)
+export(plot_filtering_stats_germline)
 export(plot_signature_contributions)
 export(plot_tmb_primary_site_tcga)
 export(plot_value_boxes)
+export(plotly_pie_chart)
 export(pon_status)
 export(predict_msi_status)
 export(qc_var_eitems)
@@ -100,6 +105,7 @@ export(structure_var_eitems)
 export(tcga_somatic_status)
 export(tier_af_distribution)
 export(update_report)
+export(vaf_plot)
 export(variant_stats_report)
 export(write_processed_vcf)
 export(write_report_excel)
